# pactester

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: conf.py  configuration.rst  index.rst  usage.rst
pactester/: __init__.py  config.py  main.py
tests/unit/: test_config.py  test_options.py
