[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pactester"
version = "1.0.0"
description = "Command-line tool to check proxy resolution using WPAD/PAC files"
readme = "README.md"
requires-python = ">=3.8,<3.12"
authors = [
  {name = "Javier Correa Guerrero", email = "javier.correa@colaborador.elcorteingles.es"}
]

dependencies = [
  "requests>=2.25.0",
  "pacparser>=1.3.7",
  "toml>=0.10.2"
]

[project.scripts]
pactester = "pactester.main:main"
