[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pactester"
version = "1.0.0"
description = "Command-line tool to check proxy resolution using WPAD/PAC files"
authors = ["Javier Correa Guerrero <jcorreag@pm.me>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
  { include = "pactester" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = ">=2.25.0"
pacparser = ">=1.3.7"
toml = ">=0.10.2"
platformdirs = ">4.0"

[tool.poetry.scripts]
pactester = "pactester.main:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
pythonpath = "." 
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
